--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-My Page
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+  <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
+  <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="js/roofpig_and_three.min.js"></script>
+  <title>Rubik</title>
+</head>
+<body>
+
+<div class="container">
+  <h3>1<sup>st</sup>: Easy cases</h3>
+  <div class="row">
+    <div class="column width200 roofpig" data-config="alg=R U R'|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div>
+    <div class="column width200 roofpig" data-config="alg=F' U' F|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div>
+    <div class="column width200 roofpig" data-config="alg=U' F' U F|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div>
+    <div class="column width200 roofpig" data-config="alg=U R U' R'|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div>
+  </div>
+</div>
+<div class="width200 roofpig" data-config="alg=R U R'|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div>
+
+</body>
+</html>
