--- a/index.html
+++ b/index.html
@@ -15,6 +15,25 @@
 
 <div class="container">
   <h3>1<sup>st</sup>: Easy cases</h3>
+  <table>
+  <thead>
+    <tr>
+      <th>Case</th>
+      <th>Mirror</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><div class="width200 roofpig" data-config="alg=R U R'|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div></td>
+      <td><div class="width200 roofpig" data-config="alg=F' U' F|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div></td>
+    </tr>
+    <tr>
+      <td><div class="width200 roofpig" data-config="alg=U' F' U F|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div></td>
+      <td><div class="width200 roofpig" data-config="alg=U R U' R'|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div></td>
+    </tr>
+  </tbody>
+  </table>
+
   <div class="row">
     <div class="column width200 roofpig" data-config="alg=R U R'|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div>
     <div class="column width200 roofpig" data-config="alg=F' U' F|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div>
