--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
 <div class="container">
   <h3>1<sup>st</sup>: Easy cases</h3>
   <table>
-  <thead>
-    <tr>
-      <th>Case</th>
-      <th>Mirror</th>
-    </tr>
-  </thead>
+    <thead>
+      <tr><th>Case</th><th>Mirror</th></tr>
+    </thead>
   <tbody>
     <tr>
       <td><div class="width150 roofpig" data-config="alg=R U R'|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div></td>
@@ -34,14 +31,23 @@
   </tbody>
   </table>
 
-  <div class="row">
-    <div class="column width200 roofpig" data-config="alg=R U R'|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div>
-    <div class="column width200 roofpig" data-config="alg=F' U' F|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div>
-    <div class="column width200 roofpig" data-config="alg=U' F' U F|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div>
-    <div class="column width200 roofpig" data-config="alg=U R U' R'|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div>
-  </div>
-</div>
-<div class="width200 roofpig" data-config="alg=R U R'|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div>
+  <h3>2<sup>nd</sup>: Corner and Edge in Top Layer (Type 1)</h3>
+  <table>
+    <thead>
+      <tr><th>Case</th><th>Mirror</th></tr>
+    </thead>
+  <tbody>
+    <tr>
+      <td><div class="width150 roofpig" data-config="alg=U' R U' R' U R U R'|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div></td>
+      <td><div class="width150 roofpig" data-config="alg=d R' U R U' R' U' R|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div></td>
+    </tr>
+    <tr>
+      <td><div class="width150 roofpig" data-config="alg=U' R U R' U R U R'|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div></td>
+      <td><div class="width150 roofpig" data-config="alg=d R' U' R U' R' U' R|colored=D* F R L U B FR|hover=1|speed=500|flags=showalg|colors=U:y F:b R:r B:g L:o D:w"></div></td>
+    </tr>
+  </tbody>
+  </table>
+
 
 </body>
 </html>
