update alg in case 6

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         }, {
           header: "Case 6: Corner on Bottom, Edge in Middle",
           cases: [
-            [{alg: ""}, {alg: "R U' R' U F' U2 F"}],
+            [{alg: ""}, {alg: "R U' R' d R' U2 R U2' R' U R"}],
             [{alg: "R U2 R U R' U R U2 R2"},{alg: "R2' U2 R' U' R U' R' U2 R'"}],
             [{alg: "R U' R' F' L' U2 L F"},{alg: "R U' R U y' L U' L' B2"}]
           ]
