--- a/blindfold.html
+++ b/blindfold.html
@@ -3,9 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui">
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
-  <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
-  <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="js/roofpig_and_three.min.js"></script>
@@ -32,21 +30,31 @@
 <body>
 
 <div id="app">
+  <form class="pure-form pure-form-aligned">
   <fieldset>
-    <label for="">Corner Position</label>
-    <input type="text" v-model="corner_pos">
-    <label for="">Corner Face</label>
-    <input type="text" v-model="corner_color">
-    <label for="">Edge Position</label>
-    <input type="text" v-model="edge_pos">
-    <label for="">Edge Face</label>
-    <input type="text" v-model="edge_color">
-    {{ cubeString }}
-    <div class="center"><button class="button-primary" v-on:click="renderCube">Render!</button></div>
+    <div class="pure-control-group">
+      <label for="">Corner Position</label>
+      <input type="text" v-model="corner_pos">
+    </div>
+    <div class="pure-control-group">
+      <label for="">Corner Face</label>
+      <input type="text" v-model="corner_color">
+    </div>
+    <div class="pure-control-group">
+      <label for="">Edge Position</label>
+      <input type="text" v-model="edge_pos">
+    </div>
+    <div class="pure-control-group">
+      <label for="">Edge Face</label>
+      <input type="text" v-model="edge_color">
+    </div>
+    <div class="pure-controls">
+      <button class="pure-button pure-button-primary" v-on:click="renderCube">Render!</button>
+    </div>
   </fieldset>
-  <div id="test">
-  </div>
-  <table>
+  </form>
+
+  <table class="pure-table">
     <thead><tr><th>U-F-R</th><th>U-B-L</th></tr></thead>
     <tbody>
       <tr>
@@ -55,6 +63,8 @@
       </tr>
     </tbody>
   </table>
+
+  <pre>{{ cubeString }}</pre>
 </div>
 
   <script>
