--- a/blindfold.html
+++ b/blindfold.html
@@ -2,13 +2,17 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="js/roofpig_and_three.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/vue"></script>
   <style>
+    body {
+      margin-left: 5px;
+      margin-right: 5px;
+    }
     .center {
       text-align: center;
       margin-left: auto;
@@ -33,7 +37,7 @@
   <form class="pure-form pure-form-aligned">
   <fieldset>
     <div class="pure-control-group">
-      <label for="">Corner Position</label>
+      <label for="">Corner Pos</label>
       <input type="text" v-model="corner_pos">
     </div>
     <div class="pure-control-group">
@@ -41,7 +45,7 @@
       <input type="text" v-model="corner_color">
     </div>
     <div class="pure-control-group">
-      <label for="">Edge Position</label>
+      <label for="">Edge Pos</label>
       <input type="text" v-model="edge_pos">
     </div>
     <div class="pure-control-group">
